fixing flex wrap

--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ textarea,
 
 .ideal-falafel {
   display: flex;
+  text-align: center;
 }
 
 /* Content */
